{
  "version": 4,
  "terraform_version": "0.13.4",
  "serial": 19,
  "lineage": "20b4bd37-fcfa-9517-b711-15e352369e45",
  "resources": [
    {
      "module": "module.database",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:254636641248:security-group/sg-00f1128b9748fd608",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00f1128b9748fd608",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "ssh",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "dp-insight-db",
            "name_prefix": "",
            "owner_id": "254636641248",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dp_insight_db"
            },
            "timeouts": null,
            "vpc_id": "vpc-024323b91f569fc28"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:254636641248:internet-gateway/igw-03dbb62647bdd5eb8",
            "id": "igw-03dbb62647bdd5eb8",
            "owner_id": "254636641248",
            "tags": {
              "Name": "dp_insight_igw"
            },
            "vpc_id": "vpc-024323b91f569fc28"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:254636641248:loadbalancer/app/dp-insight-alb/891aa912f213c513",
            "arn_suffix": "app/dp-insight-alb/891aa912f213c513",
            "dns_name": "dp-insight-alb-2042189959.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:254636641248:loadbalancer/app/dp-insight-alb/891aa912f213c513",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dp-insight-alb",
            "security_groups": [
              "sg-0a38a471f3a6ffa91"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01201a537978e9273"
              },
              {
                "subnet_id": "subnet-02c0205c6e10acff7"
              }
            ],
            "subnets": [
              "subnet-01201a537978e9273",
              "subnet-02c0205c6e10acff7"
            ],
            "vpc_id": "vpc-024323b91f569fc28",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.network.aws_security_group.alb_sg",
            "module.network.aws_subnet.private_subnet_1",
            "module.network.aws_subnet.private_subnet_2",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:254636641248:listener/app/dp-insight-alb/891aa912f213c513/b45d5ced1c823fa5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:254636641248:targetgroup/dp-insight/f8ed12d99298a9bb",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:254636641248:listener/app/dp-insight-alb/891aa912f213c513/b45d5ced1c823fa5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:254636641248:loadbalancer/app/dp-insight-alb/891aa912f213c513",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.network.aws_lb.alb",
            "module.network.aws_lb_target_group.alb_trgt_grp",
            "module.network.aws_security_group.alb_sg",
            "module.network.aws_subnet.private_subnet_1",
            "module.network.aws_subnet.private_subnet_2",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_trgt_grp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:254636641248:targetgroup/dp-insight/f8ed12d99298a9bb",
            "arn_suffix": "targetgroup/dp-insight/f8ed12d99298a9bb",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:254636641248:targetgroup/dp-insight/f8ed12d99298a9bb",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "dp-insight",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-024323b91f569fc28"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-029f227972bd8bc07",
            "owner_id": "254636641248",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03dbb62647bdd5eb8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route_table"
            },
            "vpc_id": "vpc-024323b91f569fc28"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_route_assc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-058d1fb7a03af3637",
            "route_table_id": "rtb-029f227972bd8bc07",
            "subnet_id": "subnet-04d69d893a504bf85"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_route_table.public_route_table",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:254636641248:security-group/sg-0a38a471f3a6ffa91",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a38a471f3a6ffa91",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "ssh",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "dp-insight-alb-sg",
            "name_prefix": "",
            "owner_id": "254636641248",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dp_insight_alb_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-024323b91f569fc28"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:254636641248:subnet/subnet-02c0205c6e10acff7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-02c0205c6e10acff7",
            "map_public_ip_on_launch": false,
            "owner_id": "254636641248",
            "tags": {
              "Name": "private_subnet_1"
            },
            "vpc_id": "vpc-024323b91f569fc28"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:254636641248:subnet/subnet-01201a537978e9273",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-01201a537978e9273",
            "map_public_ip_on_launch": false,
            "owner_id": "254636641248",
            "tags": {
              "Name": "private_subnet_2"
            },
            "vpc_id": "vpc-024323b91f569fc28"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:254636641248:subnet/subnet-04d69d893a504bf85",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-04d69d893a504bf85",
            "map_public_ip_on_launch": true,
            "owner_id": "254636641248",
            "tags": {
              "Name": "public_subnet"
            },
            "vpc_id": "vpc-024323b91f569fc28"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:254636641248:vpc/vpc-024323b91f569fc28",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0762d8ff124fe2278",
            "default_route_table_id": "rtb-0c8a351cf668cd575",
            "default_security_group_id": "sg-0b29a07cdd59cd7a8",
            "dhcp_options_id": "dopt-d71575ad",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-024323b91f569fc28",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c8a351cf668cd575",
            "owner_id": "254636641248",
            "tags": {
              "Name": "dp_insight_vpc"
            }
          }
        }
      ]
    }
  ]
}